# LibreTV-App

./: BUILDING.md  Implementation.md  Todos.md  douban_apis.md  generate_android_icons.py  generate_icons.py  git_diff.txt  index.html  mobile_app_logs.txt  package-lock.json  package.json  player.html  readme.md  server.mjs  test_douban_api.py
.github/scripts/: configure_gradle_signing.sh
.github/workflows/: ci.yml  release.yml
api/proxy/: [...path].mjs
css/: styles.css
public/: index.html  manifest.json  player.html  robots.txt
public/css/: player.css  styles.css
public/js/: api.js  apiDetailHandlers.js  apiRequestCore.js  apiSearchHandlers.js  apiUtils.js  api_management.js  app_event_listeners.js  app_globals.js  app_init.js  app_lifecycle.js  config.js  config_io.js  config_utils.js  details_modal.js  details_module.js  douban.js  douban_api.js  douban_filters.js  douban_logic.js  (+16 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/android_res_override/values/: themes.xml
src-tauri/android_res_override/values-v30/: themes.xml
src-tauri/icons/: icon.icns
src-tauri/mobile/android/app/: build.gradle
src-tauri/mobile/android/app/src/main/java/com/libretv/app/: MainActivity.kt
src-tauri/plugins/tauri-plugin-immersive-android/android/src/main/java/com/tauriplugin/immersive/: ImmersiveAndroidPlugin.kt
src-tauri/plugins/tauri-plugin-immersive-android/src/: lib.rs
src-tauri/res/android/: AndroidManifest.xml
src-tauri/res/android/values/: themes.xml
src-tauri/src/: lib.rs
src-tauri/src/android/kotlin/com/libretv/app/: MainActivity.kt
