[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
once_cell = "1.19.0" # For lazy static initialization
tauri = { version = "2.0.0-rc.13", features = ["custom-protocol"] }
tauri-runtime = { version = "2.0.0-rc.13" }
urlencoding = "2.1.3"
scraper = "0.19.0"
# tauri-utils will be resolved by tauri and tauri-build
# tauri-plugin-log = { version = "2.0.0-rc.1", features = ["colored"] } # Temporarily commented out to ensure compilation
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false } # 使用较新的 reqwest 版本
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] } # 使用较新的 tokio 版本
tauri-plugin-immersive-android = { path = "./plugins/tauri-plugin-immersive-android" }
